--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Children''s stories, English'
 - !lcc 'PZ'
 - !lcsh 'Short stories'
+- GITenberg
 tableOfContents: The kitchen cat -- Sarah's Sunday out -- The toad in the hole.
 title: The Kitchen Cat and Other Stories
 url: http://www.gutenberg.org/ebooks/24751
